# yumik

yumIK/: CMakeLists.txt  README.md  package.xml
yumIK/include/: YumiKinematics.h
yumIK/src/: ik.cpp  ik_client.cpp
yumIK/srv/: YumIK.srv
