<?xml version="1.0"?>
<package>
  <name>yumik</name>

  <version>1.0.0</version>

 <description>yumi ik solver.</description>

  <maintainer email="muhayyuddin.gillani@upc.edu">Muhayyuddin</maintainer>
  <maintainer email="aliakbar.akbari@upc.edu">Aliakbar Akbari</maintainer>

  <license>GPLv2</license>

  <author email="muhayyuddin.gillani@upc.edu">Muhayyuddin</author>
  <author email="aliakbar.akbari@upc.edu">Aliakbar Akbari</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>genmsgs</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend> 
  <run_depend>geometry_msgs</run_depend>
  <run_depend>genmsgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>

